2019-08-13  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_ch4.adb (Analyze_One_Call): Remove bypass for type
	mismatch in nested instantiations.
	* sem_ch8.adb (Find_Nearer_Entity): New function.
	(Find_Renamed_Entity): Use it to disambiguate the candidates for
	the renaming generated for an instantiation when it is
	ambiguous.

2019-08-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat1drv.adb (Adjust_Global_Switches): Do not set
	Back_End_Inlining in ASIS mode either.

2019-08-13  Olivier Hainque  <hainque@adacore.com>

	* libgnat/s-win32.ads: Define size_t and fix the MapViewOfFile
	binding to use it instead of DWORD for the dwNumberOfBytesToMap
	argument.
	* libgnat/g-sercom__mingw.adb (Read): State which definition of
	size_t to fetch in call to Last_Index.

2019-08-13  Arnaud Charlet  <charlet@adacore.com>

	* gcc-interface/Make-lang.in: Remove unused TRACE variable. Pass
	LN_S to relevant gnatlib targets.
	* gcc-interface/Makefile.in: Systematically pass LN_S to
	relevant gnatlib targets.

2019-08-13  Yannick Moy  <moy@adacore.com>

	* sem_dim.adb (Analyze_Dimension,
	Analyze_Dimension_Array_Aggregate, Analyze_Dimension_Call,
	Analyze_Dimension_Extension_Or_Record_Aggregate): Return
	immediately when inside an inlined body.
	* sem_res.adb (Resolve_Call): Remove special checking now done
	inside Analyze_Dimension_Call.

2019-08-13  Justin Squirek  <squirek@adacore.com>

	* exp_ch4.adb (Expand_N_Allocator): Add condition to detect
	library-level object declarations

2019-08-13  Eric Botcazou  <ebotcazou@adacore.com>

	* doc/gnat_ugn/building_executable_programs_with_gnat.rst
	(-gnateT): Document Double_Float_Alignment parameter and fix
	description of Double_Scalar_Alignment parameter.
	* gnat_ugn.texi: Regenerate.

2019-08-13  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_ch6.adb (Expand_Call_Helper): If back-end inlining is
	enabled, also instantiate the body of a generic unit containing
	a subprogram subject to aspect/pragma Inline_Always at